[project]
name = "random-networks"
version = "0.1.0"
description = "Interactive visualization tools for random network models (Erdős-Rényi and Barabási-Albert)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "plotly>=5.0",
    "scipy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/random_networks"]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
